--- a/tistory_api.ipynb
+++ b/tistory_api.ipynb
@@ -842,8 +842,7 @@
     "            pass\n",
     "        return document['title']\n",
     "    except:\n",
-    "        return -1\n",
-    "    "
+    "        return -1"
    ]
   },
   {
