--- a/tistory_api.ipynb
+++ b/tistory_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,11 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sys.stdin.readline()"
+    "sys.stdin.readline().strip()"
    ]
   },
   {
@@ -33,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +80,7 @@
        "True"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
