--- a/tistory_api.ipynb
+++ b/tistory_api.ipynb
@@ -859,7 +859,12 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -925,11 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "'<html><body><h1>링크 레이어</h1><p>드디어 링크 레이어.</p><h2>링크 레이어</h2><ul><li>네트워크 계층 아래에 있는 계층</li><li>무선 링크, 유선 링크로 나누어짐.</li><li>위에서부터 프로토콜 스택에 따라 메세지(app), 세그먼트(transport), 패킷(network)으로 내려오고 그걸 받는다.<br/>  앱 계층은 프로세스에서 처리<br/>  TCP 는 신뢰성 연결 보장<br/>  네트워크는 전송 방법, 과정</li><li>링크 레이어는 단위가 frame 이다.</li><li>지금까지 꽤 체계적인 과정으로 네트워크가 동작하는 것을 알아보았다.</li><li>하지만 아직 개념적인 부분이 있다. 실제로 어떻게 이동하는지 알아야 함.</li><li>패킷은 게이트웨이 라우터로 실제로 이동해야 한다.<br/>  이것은 네트워크 계층까진 개념적으로 연결된 모양으로 간주했다.<br/>  실제로는 물리계층에 내려가서 전자기파로 변해서 이동한다.<br/>  전자기파는 매개체를 타고 브로드캐스팅된다.<br/>  그 매개체는 모두 공유하고 있다.<br/>  신호가 섞여서 충돌이 발생할 수 있는데 충돌이 발생하면 게이트웨이는 그 신호를 해독하지 못한다.<br/>  이 계층의 주된 역할은 신호가 충돌나지 않게 하거나 충돌난 것을 해결해 주는 것.</li></ul><h2>개념</h2><ul><li>하나의 hop 을 어떻게 안전하게 넘어갈 것인가?</li><li>무선이든 유선이든 브로드캐스트 미디엄이므로 충돌 방지는 공통적임.</li><li>와이파이, 이더넷, 4G, 5G 등이 있다.</li></ul><h2>링크 레이어의 정체</h2><ul><li>전송 계층과 네트워크 계층의 프로토콜은 OS 에 구현되어 있다.<br/>  코드, 알고리즘에 탑재됨.</li><li>링크 레이어는 NIC 카드에 구워져 있다? 하드웨어?</li><li>네트워크 계층에서 내려온 패킷이 카드에서 프레임으로 만들어진다.</li></ul><h2>Access 프로토콜</h2><ul><li>만약 게이트웨이와 사용자가 전용선으로 연결되어 있다면 프로토콜이 필요없음</li><li>하지만 링크는 실제로는 공유된 매체, 채널의 형태로 되어 있다.<br/>  전파는 채널에 모든 연결된 곳에 퍼진다.<br/>  그래서 브로드캐스트 미디엄 이라고 한다.</li></ul><h2>MAC 프로토콜 - Medium Access Control</h2><ul><li>링크에서 미디엄(매체) 에 접근하는 신호들의 충돌을 해결하는 프로토콜</li><li>와이파이, 이더넷 등도 모두 MAC 프로토콜 중 하나로, 전파 충돌 해결해주는 것이라고 보면 된다.</li></ul><h2>이상적인 맥 프로토콜</h2><ul><li>하나의 노드가 전송을 할 때, 전체 대역폭을 사용할 수 있다.</li><li>여러개의 노드가 전송을 원할 땐 등분하여 대역폭을 사용할 수 있다.</li><li>완전히 분산처리되면 좋겠다.</li><li>최대한 단순했으면 좋겠다.</li></ul><h2>맥 프로토콜 큰 줄기</h2><ul><li>channel partitioning</li><li>rnadom access</li><li>taking turns</li></ul><h2>TDMA - Time Division Multiple Access</h2><ul><li>channel partitioning 기법</li><li>시간을 분할하여 각 사용자에게 할당한다.<br/>  모든 링크 프로토콜은 multiple access 가 필요하다.</li><li>이러면 충돌은 방지할 수 있다.</li><li>하지만 사용하지 않는 사용자에게도 할당이 되어 자원이 낭비된다.</li></ul><h2>FDMA - Frequency D M A</h2><ul><li>TDMA 와 다르게 주파수를 나누어 할당한다.</li><li>하지만 자원을 쪼개는 것이므로 TDMA 와 같은 장단점이 있다.</li></ul><h2>Random Access Protocal</h2><ul><li>할당된 자원에서가 아닌 원할 때 보내는 방식</li><li>충돌이 날 수 밖에 없다.</li><li>충돌을 처리하는 것이 핵심이다.</li></ul><h2>CSMA - Carrier Sense Multiple Access</h2><ul><li>말하기 전에 듣는다는 개념.</li><li>충돌을 방지하기 위함.</li><li>실제 여러명이 대화하는 상황과 유사.<br/>  누가 말하고 있을 때 기다렸다가 끝나면 이야기한다.<br/>  링크는 브로드캐스팅 미디엄이므로 누군가 통신하고 있는지를 알 수 있다.</li><li>기다렸다가 프레임을 전송해도 동시에 전송을 하면 충돌이 발생한다.</li><li>그래서 충돌을 해결해야 함.</li><li>충돌은 propagation delay 때문에 발생한다.<br/>  이 딜레이는 광속이므로 건드릴 수 없다.<br/>  즉, 충돌은 피할 수 없다.</li></ul><h2>CSMA/CD - Collision detection</h2><ul><li>충돌이 나면 충돌을 감지하고 서로 프레임 전송을 멈춘다.<br/>  실제 대화 상황처럼</li><li>멈추면 다시 시작해야 매체를 낭비하지 않고 활용할 수 있다.</li><li>누가 먼저 재전송할지에 대한 정책이 없음.<br/>  중재자가 없는 분산형이므로.<br/>  충돌 후 대기한 후 재전송한다.<br/>  대기시간은 충돌 횟수에 따라 길어진다(확률적으로)<br/>  만약 충돌이 많이 난다면 동시에 전송하고 있는 노드가 많다는 뜻이므로.<br/>  각 노드는 얼마나 많은 노드가 있는지 모르므로 우선은 낙관적으로 시작함.<br/>  이를 backoff, delay 라고 한다.</li><li>인터넷이 느려지는 이유는 링크 계층에서 충돌이 계속 일어나 backoff 가 길어지기 때문이다.<br/>  한 번에 하나의 노드만 사용할 수 있으므로!</li><li>실제로 가장 많이 사용되는 방식</li></ul><h2>Taking turns 알고리즘</h2><ul><li>channel partitioning 은 사용자가 많으면 효율적임</li><li>random access 는 사용자가 적으면 효율적임.</li><li>taking turns 는 중간 지점을 선택함.</li><li>실제로 많이 쓰이지는 않음.</li><li>중앙에서 master 가 순서를 관리함.<br/>  master 가 망가지면 다 망가지는 치명적인 단점이 있음.</li><li>혹은 토큰의 개념을 이용하여 발언권을 가지고 끝나면 넘긴다.<br/>  토큰이 유실되면 망한다.<br/>  의존성을 지니면 치명적이다.</li></ul></body></html>'\n"
    ]
@@ -947,8 +948,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     }
    },
    "outputs": [
